--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,5 @@
 @import './base/globals';
 @import './layout/header';
 @import './components/SideMenu';
+@import './components/TrendingPage';
+@import './components/FilmBox';
