--- a/src/styles/components/_SideMenu.scss
+++ b/src/styles/components/_SideMenu.scss
@@ -1,7 +1,6 @@
-
 .bm {
     &-burger-button {
-        position: fixed;
+        position: absolute;
         width: 26px;
         height: 20px;
         left: 25px;
