--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,5 @@
 @import './layout/header';
 @import './components/SideMenu';
 @import './components/TrendingPage';
+@import './components/MovieInfo';
 @import './components/FilmBox';
