--- a/src/styles/components/_MovieInfo.scss
+++ b/src/styles/components/_MovieInfo.scss
@@ -1,4 +1,46 @@
+.movie-info-container {
+
+    margin: 25px 0;
+
+    &-back-button {
+        font-family: $font-family--title;
+        color: $color--font-default;
+        margin-bottom: 25px;
+        border: 1px solid $color--font-default;
+        background: none;
+        border-radius: 30px;
+        padding: 10px 20px;
+        transition: all 0.2s ease-in;
+        cursor: pointer;
+
+        &:hover {
+            color: #fff;
+            background: $color--font-default;
+        }
+    }
+
+    &-info {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+
+        & h3 {
+            font-family: $font-family--title;
+            color: $color--font-default;
+            text-align: center ;
+            margin-top: 30px;
+        }
+
+        & p {
+            text-align: center;
+            font-family: $font-family--text;
+            margin-top: 5px;
+            color: $color--font-default;
+        }
+    }
+
 .disabled {
     display: none;
-    background: green;
-}
+}}
+
