--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,12 @@
 @import './base/font';
 @import './base/variables';
+@import './base/mixins';
 @import './layout/grid';
 @import './base/globals';
 @import './layout/header';
 @import './components/SideMenu';
-@import './components/TrendingPage';
+@import './components/GalleryPage';
 @import './components/MovieInfo';
 @import './components/FilmBox';
+@import './components/MoviePage';
+@import './components/LateralMenu';
