--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,13 +1,37 @@
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 70px 1fr;
+
+    @include media-query-desk {
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 1fr;
+    height: 100vh;
+    }
+}
+
 .header {
     background: #D9FFF6;
     width: 100%;
-    height: 70px;
+    height: 100%;
+    grid-row: 1;
+    grid-column: 1 / 2;
+
+    @include media-query-desk {
+        grid-row: 1 / 2;
+        grid-column: 1;
+    }
 }
 
 .page-area {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px repeat(auto-fill, 100px);
+    margin: 0 auto;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 1 / 2;
+    @include media-query-desk {
+        grid-row: 1 / 2;
+        grid-column: 2;
+    }
 }
 
 .container-gallery {
