Surprise Me layout updated

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,4 @@
 @import './components/FilmBox';
 @import './components/MoviePage';
 @import './components/LateralMenu';
+@import './components/SurpriseMePage';
