--- a/src/styles/components/_LateralMenu.scss
+++ b/src/styles/components/_LateralMenu.scss
@@ -24,11 +24,20 @@
             font-weight: $font-weight--text;
             color: $color--font-default;
             margin-top: 10px;
+
+            &:hover {
+                border: 1px solid lighten($color--font-default, 30%);
+                border-radius: 10px;
+            }
         }
 
         &-selected {
             border: 1px solid $color--font-default;
             border-radius: 10px;
+        }
+
+        &-logo {
+            margin-top: 25px;
         }
         
 
