Added more information in movies pages

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 // Font Family
 
-$font-family--title: 'Catamaran', Helvetica, Arial, sans-serif;
-$font-family--text: 'Montserrat', Helvetica, Arial, sans-serif;
+$font-family--title: "Catamaran", Helvetica, Arial, sans-serif;
+$font-family--text: "Montserrat", Helvetica, Arial, sans-serif;
 
 // Font Weight
 
@@ -10,4 +10,4 @@ $font-weight--text: 500;
 
 // Font color
 
-$color--font-default: #6200EE;
+$color--font-default: #6200ee;
