--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
-@import './base/font';
-@import './base/variables';
-@import './base/mixins';
-@import './layout/grid';
-@import './base/globals';
-@import './layout/header';
-@import './components/SideMenu';
-@import './components/GalleryPage';
-@import './components/MovieInfo';
-@import './components/FilmBox';
-@import './components/MoviePage';
-@import './components/LateralMenu';
-@import './components/SurpriseMePage';
+@import "./base/font";
+@import "./base/variables";
+@import "./base/mixins";
+@import "./layout/grid";
+@import "./base/globals";
+@import "./layout/header";
+@import "./components/SideMenu";
+@import "./components/GalleryPage";
+@import "./components/MovieInfo";
+@import "./components/FilmBox";
+@import "./components/MoviePage";
+@import "./components/LateralMenu";
+@import "./components/SurpriseMePage";
