--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,47 +1,46 @@
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 70px 1fr;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70px 1fr;
 
-    @include media-query-desk {
+  @include media-query-desk {
     grid-template-columns: 200px 1fr;
     grid-template-rows: 1fr;
     height: 100vh;
-    }
+  }
 }
 
 .header {
-    background: #D9FFF6;
-    width: 100%;
-    height: 100%;
-    grid-row: 1;
-    grid-column: 1 / 2;
+  background: #d9fff6;
+  width: 100%;
+  height: 100%;
+  grid-row: 1;
+  grid-column: 1 / 2;
 
-    @include media-query-desk {
-        grid-row: 1 / 2;
-        grid-column: 1;
-    }
+  @include media-query-desk {
+    grid-row: 1 / 2;
+    grid-column: 1;
+  }
 }
 
 .page-area {
-    margin: 0 auto;
-    width: 80%;
-    grid-row: 2;
-    grid-column: 1 / 2;
-    @include media-query-desk {
-        grid-row: 1 / 2;
-        grid-column: 2;
-    }
+  margin: 0 auto;
+  width: 80%;
+  grid-row: 2;
+  grid-column: 1 / 2;
+  @include media-query-desk {
+    grid-row: 1 / 2;
+    grid-column: 2;
+  }
 }
 
 .container-gallery {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .container-gallery-page {
-    width: 100%;
+  width: 100%;
 }
-
