MovieInfo component css adjusted

--- a/src/styles/components/_MovieInfo.scss
+++ b/src/styles/components/_MovieInfo.scss
@@ -1,6 +1,10 @@
 .movie-info-container {
   margin: 25px 0;
 
+  @include media-query-desk {
+    width: 90%;
+  }
+
   &-back-button {
     font-family: $font-family--title;
     color: $color--font-default;
